test_suite/tests/ui/remote/wrong_de.stderr
error[E0308]: mismatched types
 --> $DIR/wrong_de.rs:7:10
  |
7 | #[derive(Deserialize)]
  |          ^^^^^^^^^^^
  |          |
  |          expected `u16`, found `u8`
  |          help: you can convert a `u8` to a `u16`: `Deserialize.into()`
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
